--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply m-0 bg-sky-50 p-0;
+    font-family: "Ubuntu Mono", monospace;
+  }
+}
+
+@layer utilities {
+  .primary-button {
+    @apply rounded-lg bg-gradient-to-br from-green-400 to-blue-600 px-5 py-2.5 text-center text-sm font-semibold text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-2 focus:ring-green-200 dark:focus:ring-green-700;
+  }
+}
