--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,13 @@
 }
 
 @layer utilities {
-  .primary-button {
+  .success-button {
     @apply rounded-lg bg-gradient-to-br from-green-400 to-blue-600 px-5 py-2.5 text-center text-sm font-semibold text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-2 focus:ring-green-200 dark:focus:ring-green-700;
+  }
+}
+
+@layer utilities {
+  .danger-button {
+    @apply rounded-lg bg-gradient-to-br from-pink-500 to-orange-400 px-5 py-2.5 text-center text-sm font-semibold text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-2 focus:ring-pink-200 dark:focus:ring-pink-700;
   }
 }
